fix poster overflow

--- a/src/components/Poster/Poster.module.scss
+++ b/src/components/Poster/Poster.module.scss
@@ -36,6 +36,7 @@
 
 .poster {
   z-index: 2;
+  overflow: hidden;
 }
 
 .desriptionWrap {
